@@ -1,5 +1,13 @@
 2003-02-25  David Hyatt  <hyatt@apple.com>
 
+	reverseRuns was buggy and crashing.  3182658.
+	
+        Reviewed by mjs
+
+        * khtml/rendering/bidi.cpp:
+
+2003-02-25  David Hyatt  <hyatt@apple.com>
+
 	Regression caused by my inclusion of inline flows in the bidi 
 	iteration.  These flows are always empty and should be skipped
 	if found at the start of a line.
